Convert contact information to HTML format

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -4,18 +4,22 @@ title: Contact Me
 permalink: /contact/
 image: '/images/areej-amin-mogSODHCWOI-unsplash.jpg'
 ---
-## Get in Touch
+<h2>Get in Touch</h2>
 
-I'm always happy to discuss AI literacy, research and library services, and collaboration opportunities!
+<p>I'm always happy to discuss AI literacy, research and library services, and collaboration opportunities!</p>
 
-**Work Address:**  
-University of Oklahoma Libraries  
-401 W. Brooks St.  
-Norman, OK 73019
+<p><strong>Work Address:</strong><br>
+University of Oklahoma Libraries<br>
+401 W. Brooks St.<br>
+Norman, OK 73019</p>
 
-**Email:** bianca.azartash@ou.edu  
-**LinkedIn:** [linkedin.com/in/bianca-azartash](https://linkedin.com/in/bianca-azartash)  
-**GitHub:** [github.com/undomielren-lib](https://github.com/undomielren-lib)
+<p><strong>Email:</strong> <a href="mailto:bianca.azartash@ou.edu">bianca.azartash@ou.edu</a></p>
+
+<p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/bianca-azartash" target="_blank">linkedin.com/in/bianca-azartash</a></p>
+
+<p><strong>GitHub:</strong> <a href="https://github.com/undomielren-lib" target="_blank">github.com/undomielren-lib</a></p>
+
+<hr>
 ---
 
 <div class="form-container">
